--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/Assets/AssetStoreTools*
-/calibration_Data/
-/data/
-/logs/
-/Packages/
-/QCAR/
-/WordNetAPI-master/
-/Standard Assets/
-/Assets/Demigiant/*
-/Assets/Resources/DOTweenSettings.asset
-/Assets/Resources/DOTweenSettings.asset.meta
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+Assets/AssetStoreTools*
+calibration_Data/
+data/
+logs/
+Packages/
+QCAR/
+WordNetAPI-master/
+Standard Assets/
+Assets/Demigiant/*
+Assets/Resources/DOTweenSettings.asset
+Assets/Resources/DOTweenSettings.asset.meta
 # Visual Studio 2015 cache directory
 /.vs/
 
